src/objects/Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Global settings for Mobile Surveys application</description>
    <fields>
        <fullName>FilterJobsBySalesforceUser__c</fullName>
        <defaultValue>&quot;ALL&quot;</defaultValue>
        <description>ALL = All jobs available to all Mobile Users (default)
SFUSER = Mobile User can only download Jobs that are available to the Salesforce User that owns the Mobile User</description>
        <label>Filter Jobs By Salesforce User</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorVersion__c</fullName>
        <label>Major Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinorVersion__c</fullName>
        <label>Minor Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PatchVersion__c</fullName>
        <label>Patch Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReCalculateJobTargets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Job Targets need to be recalculated</description>
        <label>Recalculate Job Targets</label>
        <type>Checkbox</type>
    </fields>
    <label>Settings</label>
</CustomObject>